# bible-verse-memory

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  knope.toml
.changeset/: initial-release.md
.github/: dependabot.yml
.github/workflows/: ci.yml  prepare_release.yml  release.yml
src/: config.rs  data.rs  input.rs  lib.rs  main.rs
src/widgets/: add_verse.rs  dashboard.rs  edit_verse.rs  mod.rs  review.rs
